--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "git": "git add . && git commit -m '59 mern added'"
   },
   "keywords": [],
   "author": "",
