--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon server.js",
-    "git": "git add . && git commit -m '59 mern added'"
+    "git": "git add . && git commit"
   },
   "keywords": [],
   "author": "",
